[package]
name = "futures-stream-select-all"
version = "0.1.1"
description = "A futures library adapter for merging the output of several streams"
license = "MIT/Apache-2.0"
authors = ["Alexey Voznyuk <me@swizard.info>"]
keywords = ["futures", "async", "future", "stream", "merge"]
categories = ["asynchronous"]

[dependencies]
futures = "0.1"
